<resources>
    <string name="app_name">Demo My Second App</string>
    <string name="welcomeText">Welcome to Android!</string>
    <string name="button1Text">BUTTON 1</string>
    <string name="largeText">Large Text</string>
    <string name="button2Text">BUTTON 2</string>
    <string name="name">Name:</string>
    <string name="nameText"></string>
    <string name="password">Password:</string>
    <string name="passwordText"></string>
    <string name="register_text">Registration Form</string>
    <string name="welcome_text">Welcome to Adventure Learning Club</string>
    <string name="fullname_text">Full Name</string>
    <string name="firstname_text">First Name</string>
    <string name="lastname_text">Last Name</string>
    <string name="gender_text">Gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="studentID_text">Student ID</string>
    <string name="school_text">School</string>
    <string name="email_text">Email</string>
    <string name="phone_text">Phone</string>
    <string name="register_btn_text">Register</string>
</resources>